--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,10 @@
 		"start": "node src/main"
 	},
 	"dependencies": {
-		"cookie-parser": "^1.4.5",
 		"debug": "^4.1.1",
 		"express": "^4.17.1",
-		"multer": "^1.4.2",
 		"http-errors": "^1.8.0",
-		"mongodb": "^3.5.9",
-		"morgan": "^1.10.0",
-		"pug": "^3.0.0",
-		"mime": "^2.4.6"
+		"mongodb": "^3.6.1",
+		"cors": "^2.8.5"
 	}
 }
