--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,10 @@
 	"dependencies": {
 		"debug": "^4.1.1",
 		"express": "^4.17.1",
+		"multer": "^1.4.2",
 		"http-errors": "^1.8.0",
 		"mongodb": "^3.6.1",
+		"morgan": "^1.10.0",
 		"cors": "^2.8.5"
 	}
 }
