--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,5 +5,5 @@ WORKDIR /app
 COPY package.json /app
 COPY package-lock.json /app
 RUN npm install
-COPY src/* /app/src
+COPY ./src/ /app/src/
 CMD ["npm", "start"]
