--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"abort-controller": "^3.0.0",
+		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"debug": "^4.2.0",
 		"domino": "^2.1.6",
