--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
 		"multer": "^1.4.2",
 		"nanoid": "^3.1.16",
 		"node-fetch": "^2.6.1",
-		"page-metadata-parser": "^1.1.4"
+		"page-metadata-parser": "^1.1.4",
+		"qrcode": "^1.4.4"
 	}
 }
