--- a/static/_manifest.json
+++ b/static/_manifest.json
@@ -1,9 +1,9 @@
 {
 	"background_color": "#ffffff",
 	"theme_color": "#333333",
-	"name": "TODO",
-	"short_name": "TODO",
-	"display": "minimal-ui",
+	"name": "Cardographer",
+	"short_name": "Cardographer",
+	"display": "Cardographer",
 	"start_url": "/",
 	"icons": [
 		{
