--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"http-errors": "^1.8.0",
 		"mongodb": "^3.6.3",
 		"morgan": "^1.10.0",
+		"simplify-js": "^1.2.4",
 		"nanoid": "^3.1.20",
 		"node-fetch": "^2.6.1"
 	},
