--- a/package.json
+++ b/package.json
@@ -13,36 +13,45 @@
 		"cors": "^2.8.5",
 		"domino": "^2.1.6",
 		"express": "^4.17.1",
-		"http-errors": "^1.8.0",
-		"mongodb": "^3.6.3",
-		"morgan": "^1.10.0",
-		"simplify-js": "^1.2.4",
-		"nanoid": "^3.1.20",
-		"node-fetch": "^2.6.1"
+		"mongodb": "^3.6.4",
+		"node-fetch": "^2.6.1",
+		"simplify-js": "^1.2.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.10",
+		"@babel/core": "^7.12.16",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/plugin-transform-runtime": "^7.12.10",
-		"@babel/preset-env": "^7.12.11",
-		"@babel/runtime": "^7.12.5",
-		"@fullhuman/postcss-purgecss": "^3.1.3",
-		"@rollup/plugin-babel": "^5.2.2",
-		"@rollup/plugin-commonjs": "^17.0.0",
-		"@rollup/plugin-node-resolve": "^11.1.0",
+		"@babel/plugin-transform-runtime": "^7.12.15",
+		"@babel/preset-env": "^7.12.16",
+		"@babel/runtime": "^7.12.13",
+		"@fullhuman/postcss-purgecss": "^4.0.0",
+		"@rollup/plugin-babel": "^5.3.0",
+		"@rollup/plugin-commonjs": "^17.1.0",
+		"@rollup/plugin-node-resolve": "^11.2.0",
 		"@rollup/plugin-replace": "^2.3.4",
+		"@rollup/plugin-typescript": "^8.2.0",
+		"@tsconfig/svelte": "^1.0.10",
+		"@types/compression": "^1.7.0",
+		"@types/cors": "^2.8.10",
+		"@types/express": "^4.17.11",
+		"@types/leaflet": "^1.5.23",
+		"@types/mongodb": "^3.6.7",
+		"@types/node": "^14.14.25",
 		"cssnano": "^4.1.10",
+		"leaflet": "^1.7.1",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^7.0.32",
-		"postcss-import": "^12.0.1",
-		"postcss-load-config": "^2.1.0",
+		"postcss": "^8.2.6",
+		"postcss-import": "^14.0.0",
+		"postcss-load-config": "^3.0.1",
 		"postcss-preset-env": "^6.7.0",
-		"rollup": "^2.37.1",
+		"rollup": "^2.39.0",
 		"rollup-plugin-svelte": "^7.1.0",
 		"rollup-plugin-terser": "^7.0.2",
-		"sapper": "^0.28.10",
-		"svelte": "^3.31.2",
-		"svelte-preprocess": "^4.6.3",
-		"tailwindcss": "^1.9.6"
+		"sapper": "^0.29.1",
+		"svelte": "^3.32.3",
+		"svelte-check": "^1.1.35",
+		"svelte-preprocess": "^4.6.9",
+		"tailwindcss": "^2.0.3",
+		"tslib": "^2.1.0",
+		"typescript": "^4.1.5"
 	}
 }
