--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@types/node": "^14.14.25",
 		"cssnano": "^4.1.10",
 		"leaflet": "^1.7.1",
+		"mirada": "^0.0.15",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.2.6",
 		"postcss-import": "^14.0.0",
