--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@types/leaflet": "^1.5.23",
 		"@types/mongodb": "^3.6.7",
 		"@types/node": "^14.14.25",
+		"artcodes-js": "ktg/artcodes-js",
 		"cssnano": "^4.1.10",
 		"leaflet": "^1.7.1",
 		"mirada": "^0.0.15",
