--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
 		"simplify-js": "^1.2.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.13.1",
+		"@babel/core": "^7.13.8",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/plugin-transform-runtime": "^7.13.7",
-		"@babel/preset-env": "^7.13.5",
-		"@babel/runtime": "^7.13.7",
+		"@babel/plugin-transform-runtime": "^7.13.8",
+		"@babel/preset-env": "^7.13.8",
+		"@babel/runtime": "^7.13.8",
 		"@fullhuman/postcss-purgecss": "^4.0.2",
 		"@rollup/plugin-babel": "^5.3.0",
 		"@rollup/plugin-commonjs": "^17.1.0",
@@ -36,6 +36,7 @@
 		"@types/leaflet": "^1.5.23",
 		"@types/mongodb": "^3.6.8",
 		"@types/node": "^14.14.31",
+		"@types/node-fetch": "^2.5.8",
 		"cssnano": "^4.1.10",
 		"leaflet": "^1.7.1",
 		"mirada": "^0.0.15",
@@ -44,12 +45,12 @@
 		"postcss-import": "^14.0.0",
 		"postcss-load-config": "^3.0.1",
 		"postcss-preset-env": "^6.7.0",
-		"rollup": "^2.39.1",
+		"rollup": "^2.40.0",
 		"rollup-plugin-svelte": "^7.1.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"sapper": "^0.29.1",
-		"svelte": "^3.32.3",
-		"svelte-check": "^1.1.35",
+		"svelte": "^3.34.0",
+		"svelte-check": "^1.1.36",
 		"svelte-preprocess": "^4.6.9",
 		"tailwindcss": "^2.0.3",
 		"tslib": "^2.1.0",
