--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
 	},
 	"dependencies": {
 		"abort-controller": "^3.0.0",
+		"connect-mongo": "^4.4.0",
 		"cors": "^2.8.5",
 		"domino": "^2.1.6",
 		"express": "^4.17.1",
-		"mongodb": "^3.6.4",
+		"express-session": "^1.17.1",
+		"mongodb": "^3.6.5",
+		"multer": "^1.4.2",
+		"nanoid": "^3.1.22",
 		"node-fetch": "^2.6.1",
 		"simplify-js": "^1.2.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.13.8",
+		"@babel/core": "^7.13.10",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/plugin-transform-runtime": "^7.13.8",
-		"@babel/preset-env": "^7.13.8",
-		"@babel/runtime": "^7.13.8",
+		"@babel/plugin-transform-runtime": "^7.13.10",
+		"@babel/preset-env": "^7.13.10",
+		"@babel/runtime": "^7.13.10",
 		"@fullhuman/postcss-purgecss": "^4.0.2",
 		"@rollup/plugin-babel": "^5.3.0",
 		"@rollup/plugin-commonjs": "^17.1.0",
@@ -33,28 +37,31 @@
 		"@types/compression": "^1.7.0",
 		"@types/cors": "^2.8.10",
 		"@types/express": "^4.17.11",
-		"@types/leaflet": "^1.5.23",
-		"@types/mongodb": "^3.6.8",
-		"@types/node": "^14.14.31",
+		"@types/express-session": "^1.17.3",
+		"@types/leaflet": "^1.7.0",
+		"@types/mongodb": "^3.6.10",
+		"@types/multer": "^1.4.5",
+		"@types/nanoid": "^2.1.0",
+		"@types/node": "^14.14.35",
 		"@types/node-fetch": "^2.5.8",
 		"artcodes-js": "ktg/artcodes-js",
 		"cssnano": "^4.1.10",
 		"leaflet": "^1.7.1",
 		"mirada": "^0.0.15",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.2.6",
+		"postcss": "^8.2.8",
 		"postcss-import": "^14.0.0",
 		"postcss-load-config": "^3.0.1",
 		"postcss-preset-env": "^6.7.0",
-		"rollup": "^2.40.0",
+		"rollup": "^2.41.4",
 		"rollup-plugin-svelte": "^7.1.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"sapper": "^0.29.1",
-		"svelte": "^3.34.0",
-		"svelte-check": "^1.1.36",
+		"svelte": "^3.35.0",
+		"svelte-check": "^1.2.5",
 		"svelte-preprocess": "^4.6.9",
 		"tailwindcss": "^2.0.3",
 		"tslib": "^2.1.0",
-		"typescript": "^4.2.2"
+		"typescript": "^4.2.3"
 	}
 }
