--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
 		"simplify-js": "^1.2.4"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.25",
+		"@sveltejs/adapter-node": "^1.0.0-next.26",
 		"@sveltejs/kit": "^1.0.0-next.115",
-		"@typescript-eslint/eslint-plugin": "^4.26.1",
-		"@typescript-eslint/parser": "^4.26.1",
+		"@types/mongodb": "^3.6.18",
+		"@typescript-eslint/eslint-plugin": "^4.27.0",
+		"@typescript-eslint/parser": "^4.27.0",
 		"autoprefixer": "^10.2.6",
 		"cssnano": "^5.0.6",
-		"eslint": "^7.28.0",
+		"eslint": "^7.29.0",
 		"eslint-plugin-svelte3": "^3.2.0",
-		"postcss": "^8.3.4",
+		"postcss": "^8.3.5",
 		"postcss-import": "^14.0.2",
 		"postcss-load-config": "^3.1.0",
 		"svelte": "^3.38.2",
 		"svelte-preprocess": "^4.7.3",
-		"tailwindcss": "^2.1.4",
+		"tailwindcss": "^2.2.2",
 		"tslib": "^2.3.0",
-		"typescript": "^4.3.2"
+		"typescript": "^4.3.4"
 	},
 	"type": "module"
 }
