--- a/package.json
+++ b/package.json
@@ -12,28 +12,29 @@
 	"dependencies": {
 		"abort-controller": "^3.0.0",
 		"domino": "^2.1.6",
-		"mongodb": "^3.6.9",
+		"mongodb": "^3.6.10",
 		"node-fetch": "^2.6.1",
 		"simplify-js": "^1.2.4"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.26",
-		"@sveltejs/kit": "^1.0.0-next.115",
-		"@types/mongodb": "^3.6.18",
-		"@typescript-eslint/eslint-plugin": "^4.27.0",
-		"@typescript-eslint/parser": "^4.27.0",
-		"autoprefixer": "^10.2.6",
+		"@sveltejs/adapter-node": "^1.0.0-next.33",
+		"@sveltejs/kit": "^1.0.0-next.127",
+		"@types/mongodb": "^3.6.20",
+		"@types/plotly.js": "^1.54.11",
+		"@typescript-eslint/eslint-plugin": "^4.28.3",
+		"@typescript-eslint/parser": "^4.28.3",
+		"autoprefixer": "^10.3.1",
 		"cssnano": "^5.0.6",
-		"eslint": "^7.29.0",
+		"eslint": "^7.30.0",
 		"eslint-plugin-svelte3": "^3.2.0",
 		"postcss": "^8.3.5",
 		"postcss-import": "^14.0.2",
 		"postcss-load-config": "^3.1.0",
-		"svelte": "^3.38.2",
-		"svelte-preprocess": "^4.7.3",
-		"tailwindcss": "^2.2.2",
+		"svelte": "^3.38.3",
+		"svelte-preprocess": "^4.7.4",
+		"tailwindcss": "^2.2.4",
 		"tslib": "^2.3.0",
-		"typescript": "^4.3.4"
+		"typescript": "^4.3.5"
 	},
 	"type": "module"
 }
