--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
 		"simplify-js": "^1.2.4"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.33",
-		"@sveltejs/kit": "^1.0.0-next.127",
+		"@sveltejs/adapter-node": "^1.0.0-next.35",
+		"@sveltejs/kit": "^1.0.0-next.132",
 		"@types/mongodb": "^3.6.20",
-		"@types/plotly.js": "^1.54.11",
-		"@typescript-eslint/eslint-plugin": "^4.28.3",
-		"@typescript-eslint/parser": "^4.28.3",
+		"@types/plotly.js": "^1.54.12",
+		"@typescript-eslint/eslint-plugin": "^4.28.4",
+		"@typescript-eslint/parser": "^4.28.4",
 		"autoprefixer": "^10.3.1",
 		"cssnano": "^5.0.6",
-		"eslint": "^7.30.0",
+		"eslint": "^7.31.0",
 		"eslint-plugin-svelte3": "^3.2.0",
 		"postcss": "^8.3.5",
+		"miro-templating": "^1.1.0",
 		"postcss-import": "^14.0.2",
 		"postcss-load-config": "^3.1.0",
 		"svelte": "^3.38.3",
