--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
 		"moduleResolution": "node",
 		"module": "es2020",
 		"lib": [
-			"es2020"
+			"es2020",
+			"dom"
 		],
 		"target": "es2019",
 		/**
